--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 </p>
                 <p class="hero-text">You <em>know</em> you want to.</p>
             </div>
-            <div class="form" id="signup-form" action="/my-handling-form-page" method="post">
+            <div class="form">
                 <h2>Let's do this!</h2>
-                <form>
+                <form id="signup-form" action="/my-handling-form-page" method="post">
                     <div>
                         <ul>
                             <li>
