--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="form">
                 <h2>Let's do this!</h2>
-                <form id="signup-form" action="/my-handling-form-page" method="post">
+                <form novalidate id="signup-form" action="/my-handling-form-page" method="post">
                     <div>
                         <ul>
                             <li>
